--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.10.1",
-    "browserify-middleware": "^4.1.0",
+    "browserify": "^8.1.3",
     "colors": "^1.0.3",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.1",
     "express": "^4.11.0",
+    "falafel": "^1.0.0",
     "jade": "^1.9.1",
     "less-middleware": "^1.0.4",
+    "minimist": "^1.1.0",
     "morgan": "^1.5.1",
     "react": "^0.12.2",
     "serve-favicon": "^2.2.0",
