--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.10.1",
     "browserify": "^8.1.3",
     "colors": "^1.0.3",
+    "compression": "^1.4.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.1",
     "express": "^4.11.0",
@@ -18,7 +19,8 @@
     "react": "^0.12.2",
     "serve-favicon": "^2.2.0",
     "source-map-support": "^0.2.9",
-    "superagent": "^0.21.0"
+    "superagent": "^0.21.0",
+    "uglify-js": "^2.4.16"
   },
   "devDependencies": {},
   "scripts": {
