--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "minimist": "^1.1.0",
     "morgan": "^1.5.1",
     "react": "^0.12.2",
+    "react-router": "^0.12.0",
     "serve-favicon": "^2.2.0",
     "source-map-support": "^0.2.9",
     "superagent": "^0.21.0",
